# D3d12info

./: .gitattributes  .gitignore  .gitmodules  AgsData.cpp  AgsData.hpp  CHANGELOG.md  CMakeLists.txt  D3d12info on GitHub.url  D3d12info.cpp  D3d12info.sln  D3d12info.vcxproj  D3d12info.vcxproj.filters  Enums.hpp  Json.cpp  Json.hpp  LICENSE.txt  Main.cpp  NvApiData.cpp  NvApiData.hpp  Printing.cpp  Printing.hpp  README.md  Utils.cpp  Utils.hpp  VulkanData.cpp  VulkanData.hpp  d3d12.1.720.0-preview-TODO.md  pch.cpp  pch.h  pch.hpp
.github/workflows/: CI.yml  Package.yml
Scripts/: FormatAll.ps1
Src/: .clang-format  .clang-format-ignore  AgsData.cpp  AgsData.hpp  AmdDeviceInfoData.cpp  AmdDeviceInfoData.hpp  D3d12info.vcxproj  D3d12info.vcxproj.filters  Enums.hpp  GUID.cpp  GUID.hpp  IntelData.cpp  IntelData.hpp  Json.cpp  Json.hpp  Main.cpp  NvApiData.cpp  NvApiData.hpp  PostBuildStep.bat  Printer.cpp  Printer.hpp  Printing.cpp  Printing.hpp  Resources.rc  SystemData.cpp  SystemData.hpp  Utils.cpp  Utils.hpp  VulkanData.cpp  VulkanData.hpp  packages.config  pch.hpp
Src/ReportFormatter/: ConsoleReportFormatter.cpp  ConsoleReportFormatter.hpp  JSONReportFormatter.cpp  JSONReportFormatter.hpp  ReportFormatter.cpp  ReportFormatter.hpp  TextReportFormatter.cpp  TextReportFormatter.hpp
